Uploaded image for project: 'ORC'
  1. ORC
  2. ORC-1500

[C++] The partition field does not support English special characters

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 2.0.0
    • C++
    • None
    • Hadoop-3.2.0, Spark-3.1.1

    Description

      In the native orc scenario, the C++ orc reader does not support the partition field containing English special characters. As a result, the SQL job fails to be executed and no execution result is displayed.

      Attachments

        Issue Links

          Activity

            People

              linlong_job linlong_job
              linlong_job linlong_job
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: