ORC-1500: [C++] The partition field does not support English special characters

### What changes were proposed in this pull request?
The URI encoding is deleted during the initialization of OrcHdfsFile

### Why are the changes needed?
For the context of [ORC-1500](https://issues.apache.org/jira/browse/ORC-1500), the C++ orc reader does not support the partition field containing English special characters. As a result, the SQL job fails to be executed and no execution result is displayed.

### How was this patch tested?
No new tests were added.

Closes #1609 from kumonlin/main.

Authored-by: kumonlin <61996893+kumonlin@users.noreply.github.com>
Signed-off-by: Gang Wu <ustcwg@gmail.com>